// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Passing a bunch of additional props 1`] = `
<Formik
  initialValues={
    Object {
      "name": "",
    }
  }
  onSubmit={[Function]}
>
  <Field
    autoCapitalize="yes"
    buttonRef={
      Object {
        "current": null,
      }
    }
    checked={false}
    color="primary"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    disableFocusRipple={true}
    disableRipple={true}
    disableTouchRipple={true}
    disabled={true}
    name="testCheckbox"
    onAbort={[MockFunction]}
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    value="testCheckbox"
  />
</Formik>
`;

exports[`Snapshot Testing Passing custom checked property 1`] = `
<Formik
  initialValues={
    Object {
      "name": "",
    }
  }
  onSubmit={[Function]}
>
  <Field
    checked={true}
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    name="testCheckbox"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    value="testCheckbox"
  />
</Formik>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Formik
  initialValues={
    Object {
      "name": "",
    }
  }
  onSubmit={[Function]}
>
  <Field
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    name="testCheckbox"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    value="testCheckbox"
  />
</Formik>
`;
